--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/lo.webp" />
+    <link rel="icon" type="image/svg+xml" href="/images/lo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Goodwill Facade</title>
   </head>
